--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>predict4java</artifactId>
 	<version>1.2-SNAPSHOT</version>
 	<name>${project.artifactId}</name>
-	<description>predicts satellite positions using TLE</description>
+	<description>predict4java provides real-time satellite tracking and orbital prediction information</description>
 	
 	<licenses>
 		<license>
@@ -18,7 +18,6 @@
 		<compiler.source.version>1.6</compiler.source.version>
 		<cobertura.version>2.5.2</cobertura.version>
 		<checkstyle.version>2.9.1</checkstyle.version>
-		<failsafe.version>2.12.3</failsafe.version>
 		<findbugs.version>2.5.2</findbugs.version>
 		<javadoc.version>2.8.1</javadoc.version>
 		<pmd.version>2.7.1</pmd.version>
@@ -27,10 +26,7 @@
 		<project.info.version>2.5</project.info.version>
 		<jxr.version>2.3</jxr.version>
 		<taglist.version>2.4</taglist.version>
-		<dashboard.version>1.0.0-beta-1</dashboard.version>
-		<m3.site.version>3.1</m3.site.version>
-		<gwt.maven.plugin.version>1.3-20100615.193834-6</gwt.maven.plugin.version>
-		<changelog.version>2.2</changelog.version>
+		<m3.site.version>3.2</m3.site.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -150,16 +146,6 @@
 							<groupId>org.codehaus.mojo</groupId>
 							<artifactId>taglist-maven-plugin</artifactId>
 							<version>${taglist.version}</version>
-						</plugin>
-						<!-- commented this plugin out because cannot run offline (e.g. at 
-							home) -->
-						<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-changelog-plugin</artifactId> 
-							<version>${changelog.version}</version> <configuration> <username>${svn.username}</username> 
-							<password>${svn.password}</password> </configuration> </plugin> -->
-						<plugin>
-							<groupId>org.codehaus.mojo</groupId>
-							<artifactId>dashboard-maven-plugin</artifactId>
-							<version>${dashboard.version}</version>
 						</plugin>
 					</reportPlugins>
 				</configuration>
