--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.amsacode</groupId>
 	<artifactId>predict4java</artifactId>
-	<version>1.2.0.7</version>
+	<version>1.2.0.8-SNAPSHOT</version>
 	<name>${project.artifactId}</name>
 	<description>predict4java provides real-time satellite tracking and orbital prediction information</description>
 	<prerequisites>
