--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,12 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.github.amsacode</groupId>
+    <parent>
+        <groupId>com.github.davidmoten</groupId>
+        <artifactId>sonatype-parent</artifactId>
+        <version>0.1</version>
+    </parent>
+    <groupId>com.github.davidmoten</groupId>
     <artifactId>predict4java</artifactId>
     <version>1.2.0.8-SNAPSHOT</version>
     <name>${project.artifactId}</name>
