--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,17 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>${javadoc.version}</version>
+                <configuration>
+                    <additionalOptions>
+                        -Xdoclint:none
+                    </additionalOptions>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
     <reporting>
