--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.github.davidmoten</groupId>
@@ -9,7 +7,7 @@
     </parent>
     <groupId>com.github.davidmoten</groupId>
     <artifactId>predict4java</artifactId>
-    <version>1.2.0.8-SNAPSHOT</version>
+    <version>1.3</version>
     <name>${project.artifactId}</name>
     <description>predict4java provides real-time satellite tracking and orbital prediction information</description>
     <prerequisites>
@@ -41,7 +39,7 @@
         <connection>${scm.url}</connection>
         <url>${scm.url}</url>
         <developerConnection>${scm.url}</developerConnection>
-        <tag>HEAD</tag>
+        <tag>1.3</tag>
     </scm>
 
     <dependencies>
