--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     </parent>
     <groupId>com.github.davidmoten</groupId>
     <artifactId>predict4java</artifactId>
-    <version>1.3.1</version>
+    <version>1.3.2-SNAPSHOT</version>
     <name>${project.artifactId}</name>
     <description>predict4java provides real-time satellite tracking and orbital prediction information</description>
     <prerequisites>
@@ -39,7 +39,7 @@
         <connection>${scm.url}</connection>
         <url>${scm.url}</url>
         <developerConnection>${scm.url}</developerConnection>
-        <tag>1.3.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <dependencies>
